[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://sprites/health_under.png" type="Texture" id=2]
[ext_resource path="res://sprites/health_over.png" type="Texture" id=3]
[ext_resource path="res://EquipmentPro.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://materials/DefaultFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://sprites/window.png" type="Texture" id=6]
[ext_resource path="res://sprites/tomes/default_aura.png" type="Texture" id=7]
[ext_resource path="res://UpgradeWindow.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/tomes/book_arc.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://EquipmentPro.ttf"

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0.0156863, 0.0823529, 0.156863, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0.0156863, 0.0823529, 0.156863, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 3.7, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.16632
margin_right = 1.16626
script = ExtResource( 1 )

[node name="Health" type="TextureProgress" parent="."]
margin_left = 11.0
margin_top = 9.48872
margin_right = 267.0
margin_bottom = 41.4887
rect_scale = Vector2( 0.7, 0.4 )
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="HealthText" type="Label" parent="."]
margin_left = 194.797
margin_top = 8.175
margin_right = 241.797
margin_bottom = 24.175
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.0156863, 0.0823529, 0.156863, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "100/100"

[node name="Alert" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 31.4414
margin_right = 221.0
margin_bottom = 47.4414
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.74902, 0.764706, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.0156863, 0.0823529, 0.156863, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "This text is displayed to notify an item pickup."
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Alert"]
anims/alert_fade = SubResource( 4 )

[node name="Pickup" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.27686
margin_top = -16.8093
margin_right = 297.277
margin_bottom = -0.809265
grow_horizontal = 2
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.74902, 0.764706, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.0156863, 0.0823529, 0.156863, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "This text is displayed to notify an item pickup."
valign = 1
autowrap = true

[node name="Tween" type="Tween" parent="Pickup"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pickup"]
anims/pickup_fade = SubResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.1125
margin_top = -78.7019
margin_right = 83.1125
margin_bottom = -14.7019
__meta__ = {
"_edit_group_": true
}

[node name="CurrentTome" type="TextureRect" parent="CenterContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 32.0

[node name="PrimaryWindow" type="TextureRect" parent="CenterContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 6 )

[node name="CurrentAura" type="TextureRect" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 34.321
margin_top = -65.2647
margin_right = 66.321
margin_bottom = -33.2647
texture = ExtResource( 7 )

[node name="UpgradeWindow" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Cursor" type="Control" parent="."]
visible = false
margin_right = 20.0
margin_bottom = 21.0
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Tome" type="TextureRect" parent="Cursor"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 9 )

[node name="Aura" type="TextureRect" parent="Cursor"]
margin_left = -9.22073
margin_top = -11.6796
margin_right = 22.7793
margin_bottom = 20.3204
texture = ExtResource( 7 )
